# Notebook

./: CMakeLists.txt  Collection.cpp  Collection.h  CollectionObserver.h  MainFrame.cpp  MainFrame.h  Note.h  Observer.h  StorageManager.cpp  StorageManager.h  main.cpp
test/: CMakeLists.txt  runAllTests.cpp
